Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-02-03 (SVN):
    * vid_svgalib.c: In VID_SetMode, check return code from vga_setmode.
      Call VID_SetPalette after we get the framebuffer ptr. In VID_Init,
      make sure that we have at least one supported mode.

2012-02-02 (SVN):
    * vid_svgalib.c: Fixed planar (modex) modes when using svgalib-1.9.x
      and the svgalib_helper kernel module. Removed the necessity of x86
      assembly for compilation. Removed linux-only limitation (other OSs
      such as FreeBSD aren't tested though.)

2012-01-31 (SVN):
    * gl_draw.c: Change the order of gl_texmodes.

2012-01-31 (SVN):
    * vid_vga.c: Added a C-only implementation of VGA_UpdatePlanarScreen
      based on vga_copytoplanar256 of SVGAlib. Added a C-only version of
      VGA_UpdateLinearScreen simply by using memcpy.
    * Makefiles: Made it possible to compile the dos version without x86
      assembly.
    * d_copy.asm: Added a few comments from the original d_copy.S.

2012-01-31 (SVN):
    * gl_draw.c, glquake.h: Stored the flags passed to GL_LoadTexture in
      the gltexture_t structure. Adjusted GL_Upload8() and GL_Upload32()
      accordingly to accept a gltexture_t parameter.
    * updated version date stamp to 2012-01-31.

2012-01-30 (SVN):
    * Make "gl_texturemode" a persistent cvar with callback.

2012-01-30 (SVN):
    * net_sys.h: Add __FreeBSD_kernel__ to the HAVE_SA_LEN list. Debian
      bug entry: http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=657793

2012-01-30 (SVN):
    * r_edge.c (R_ScanEdges): In the "make sure nothing sorts past this"
      code, edge_sentinel.u was assigned 2000<<24 for which clang emitted
      -Wshift-overflow warning "signed shift result (0x7D0000000) requires
      36 bits to represent, but 'int' only has 32". Comments from Bill
      Currie (of the quakeforge project): "... going by the goals of the
      code, getting the largest number representable (or something close)