@@ -33,6 +33,8 @@ Changes since the uhexen2-1.5.1 release:
 * Unix / SVGAlib video: Fixed planar modes when using the
   svgalib_helper kernel module. Removed the need for x86
   assembly for compilation and the linux-only limitation.
+* Unix / SVGAlib video: Fixed messed up colors upon coming
+  back from a vt switching.
 * Unix, MIDI: Several updates to the Timidity backend.
 * Timidity, Windows MIDI: Support for Microsoft RMID format.
 * Windows MIDI: Fixed broken tempo with certain midi files
